--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -5,20 +5,20 @@
 	padding: 10px;
 
 	cursor: pointer;
+
+	transition: all 0.2s;
 	text-align: center;
 
 	border: none;
 	border-radius: 5px;
 
 	font-size: 14px;
-
-	transition: all 0.2s;
 }
 
 .primary {
-    color: var(--neutral-white);
-    background-color: var(--primary);
+	color: var(--neutral-white);
 	border: 1px solid transparent;
+	background-color: var(--primary);
 }
 
 .primary:hover {
@@ -26,13 +26,29 @@
 }
 
 .ghost {
-    color: var(--neutral-black);
-    background: none;
-    border: 1px solid var(--neutral-light);
+	color: var(--neutral-black);
+	border: 1px solid var(--neutral-light);
+	background: none;
 }
 
 .ghost:hover {
 	color: var(--neutral-white);
-	background-color: var(--primary-hover);
 	border: 1px solid transparent;
+	background-color: var(--primary-hover);
+}
+
+.arrow {
+	display: inline-block;
+
+	margin-left: 10px;
+}
+
+.down {
+	transition: all 0.2s;
+	transform: rotate(90deg);
+}
+
+.primary svg,
+.ghost:hover svg {
+	fill: var(--neutral-white);
 }
