--- a/components/Label/Label.module.css
+++ b/components/Label/Label.module.css
@@ -1,49 +1,58 @@
 .label {
-    display: inline-flex;
-    align-items: center;
-    box-sizing: border-box;
-    text-align: center;
-    white-space: nowrap;
-    border-radius: 20px;
-    margin-right: 5px;
+	display: inline-flex;
+	align-items: center;
+
+	box-sizing: border-box;
+	margin-right: 5px;
+
+	text-align: center;
+	white-space: nowrap;
+
+	border-radius: 20px;
 }
 
 .s {
-    padding: 5px 10px;
-    font-size: 12px;
-    line-height: 12px;
+	padding: 5px 10px;
+
+	font-size: 12px;
+	line-height: 12px;
 }
 
 .m {
-    padding: 5px 10px;
-    font-size: 14px;
-    line-height: 14px;
+	padding: 5px 10px;
+
+	font-size: 14px;
+	line-height: 14px;
 }
 
 .ghost {
-    border: 1px solid var(--neutral-light);
+	border: 1px solid var(--lightGray);
 }
 
 .red {
-    color: var(--neutral-white);
-    background-color: #DE0000;
-    font-weight: bold;
+	color: var(--white);
+	background-color: var(--dangerDark);
+
+	font-weight: bold;
 }
 
 .gray {
-    color: var(--neutral-white);
-    background-color: #B3C0D9;
-    font-weight: bold;
+	color: var(--white);
+	background-color: var(--darkGray);
+
+	font-weight: bold;
 }
 
 .success {
-    color: var(--success);
-    background-color: var(--success-light);
-    font-weight: bold;
+	color: var(--success);
+	background-color: var(--successLight);
+
+	font-weight: bold;
 }
 
 .primary {
-    color: var(--primary);
-    border: 1px solid var(--primary);
-    font-weight: bold;
+	color: var(--primary);
+	border: 1px solid var(--primary);
+
+	font-weight: bold;
 }
