--- a/layout/Layout.module.css
+++ b/layout/Layout.module.css
@@ -3,17 +3,16 @@
 
 	min-height: 100vh;
 	grid-template-rows: auto 1fr auto;
-	grid-template-columns: auto 230px minmax(300px, 1200px) auto;
-	gap: 0 30px;
+	grid-template-columns: auto 230px minmax(300px, 1173px) auto;
+	gap: 30px;
 	grid-template-areas:
-		". header header ."
+		"header header header header"
 		". sidebar body ."
 		"footer footer footer footer";
 }
 
 .header {
 	grid-area: header;
-	display: none;
 }
 
 .sidebar {
@@ -28,24 +27,35 @@
 	grid-area: footer;
 }
 
-@media (max-width: 765px) {
+@media (max-width: 1493px) {
 	.wrapper {
-		display: grid;
-
-		min-height: 100vh;
-		grid-template-rows: auto 1fr auto;
-		grid-template-columns: minmax(320px, 1fr);
-		grid-template-areas:
-				". header ."
-				". body ."
-				"footer footer footer";
+		grid-template-columns: auto 230px minmax(300px, 879px) auto;
 	}
+}
 
-	.header {
-		display: block;
+@media (max-width: 1199px) {
+	.wrapper {
+		grid-template-columns: auto 180px minmax(300px, 721px) auto;
+	}
+}
+
+@media (max-width: 991px) {
+	.wrapper {
+		grid-template-columns: 10px minmax(300px, 1fr) 10px;
+
+		grid-template-areas:
+			"header header header"
+			". body ."
+			"footer footer footer";
 	}
 
 	.sidebar {
 		display: none;
+	}
+}
+
+@media (max-width: 641px) {
+	.wrapper {
+		gap: 30px 0;
 	}
 }
