--- a/components/Button/Button.module.scss
+++ b/components/Button/Button.module.scss
@@ -19,22 +19,22 @@
 	color: var(--white);
 	border: 1px solid transparent;
 	background-color: var(--primary);
-}
 
-.primary:hover {
-	background-color: var(--primaryDark);
+	&:hover {
+		background-color: var(--primaryDark);
+	}
 }
 
 .ghost {
 	color: var(--darkSlateGray);
 	border: 1px solid var(--lightGray);
 	background: none;
-}
 
-.ghost:hover {
-	color: var(--white);
-	border: 1px solid transparent;
-	background-color: var(--primaryDark);
+	&:hover {
+		color: var(--white);
+		border: 1px solid transparent;
+		background-color: var(--primaryDark);
+	}
 }
 
 .arrow {
