--- a/layout/Footer/Footer.module.scss
+++ b/layout/Footer/Footer.module.scss
@@ -11,17 +11,13 @@
 	line-height: 20px;
 	grid-template-columns: 1fr auto auto;
 	gap: 10px 30px;
-}
 
-.footer a:hover {
-	color: var(--gray);
-}
+	a:hover {
+		color: var(--gray);
+	}
 
-@media (max-width: 991px) {
-	.footer {
+	@media (max-width: 991px) {
 		grid-template-columns: 1fr;
-
-		padding: 25px 30px;
 
 		font-size: 12px;
 		line-height: 20px;
